# sloth

./: main.py  pyproject.toml
src/sloth/: sloth.py
src/sloth_hatch/: sloth.py
